# Fact-Verification-System-LLM

./: .gitignore  Makefile  README.md  base.yml  claims-original.csv  dummy.py  environment.yml  evaluated-dataset-v0.csv  evaluated-dataset.csv  evaluation-dataset-v0.csv  evaluation-dataset.csv  evaluation.py  main.py  pyproject.toml  tmp.json
evaluation/: evaluated-dataset-v0.csv  evaluated-dataset-v1.csv  evaluation-bert-v0.csv  evaluation-bert-v1.csv  evaluation-bert-v2.csv  evaluation-dataset-v0.csv  evaluation-dataset-v1.csv  evaluation-retriever-v0.csv  evaluation-retriever-v1.csv  evaluation.py
fact-checker/: data_loaders.py
fact_checker/: __init__.py  custom_citation.py  data_loaders copy.py  data_loaders.py  decomposer.py  hier_loaders.py  llm_model.py  query_pipeline.py  test.py  utils.py
flask_app/: routes.py
flask_app/static/: custom.css
flask_app/templates/: index copy.html  index.html
prompts/: dummy_prompt.txt
prompts/consolidation/: consolidation-v0.txt  consolidation-v1.txt  consolidation-v3.txt
prompts/decompose/: decompose-v0.txt  decompose-v1.txt  decompose-v2.txt
prompts/translation/: translation-v0.txt
prompts/verification/: verification-v0.txt  verification-v1.txt  verification-v2.txt
